add catatan di tempat penyimpanan
